<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.app3.ImpExpActivity">

    <Button
        android:id="@+id/exportButton"
        android:text="@string/exp_mail"
        android:textColor="@color/colorIconText"
        android:onClick="exportJson"
        style="@style/buttonTypeTheme">
    </Button>

    <Button
        android:id="@+id/importButton"
        android:text="@string/imp_mail"
        android:textColor="@color/colorIconText"
        android:onClick="importJson"
        style="@style/buttonTypeTheme">
    </Button>

    <Button
        android:id="@+id/pickButton"
        android:text="@string/exp_file"
        android:textColor="@color/colorIconText"
        android:onClick="generateFile"
        style="@style/buttonTypeTheme">
    </Button>

    <Button
        android:id="@+id/generateButton"
        android:text="@string/imp_file"
        android:textColor="@color/colorIconText"
        android:onClick="pickFile"
        style="@style/buttonTypeTheme">
    </Button>

</LinearLayout>
