<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/EditTextTitle"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_width="fill_parent"
            android:maxLength="42"/>

        <EditText
            android:id="@+id/EditTextDesc"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:lines="5"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"
            android:maxLength="500">
        </EditText>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:text="@string/add"
            android:onClick="addNote"
            style="@style/buttonTypeTheme">
        </Button>

    </LinearLayout>

</ScrollView>
